
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:background="@color/colorFavorite"
tools:context="com.noandroid.familycontacts.EditContactAcitivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="232dp">


        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:src="@drawable/allen_xie_bg"

            android:id="@+id/button_bg_change_avatar_edit" />


        <de.hdodenhof.circleimageview.CircleImageView



            android:layout_width="96dp"
            android:layout_height="96dp"

            android:src="@drawable/allen_xie_icon"

            android:id="@+id/img_avatar"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />





    </RelativeLayout>






    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        android:background="#6699FF"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.noandroid.familycontacts.EditContactAcitivity">

        <!-- Login progress -->


        <ScrollView
            android:id="@+id/src_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/edit_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_edit_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edit_relationship"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_edit_relationship"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edit_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_edit_phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>







                <Button
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/string_edit_ok"

                   android:id="@+id/edit_ok" />

            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</LinearLayout>